prepair security and config